# rfm

./: .gitignore  README.md  config.yaml  pyproject.toml
simulations/: network.sh
simulations/sim0/: output.xml  rail.net.xml  rail.rou.xml
simulations/sim1/: README.md  output.xml
simulations/sim2/: model.safetensors  rail.net.xml  rail.nod.xml
simulations/sim3/: README.md  rail.rou.xml  rail.sumocfg
src/: create_network.py  data.py  eval.py  hgt.py  hgt_temp.py  rfm.py  sample_gnn.py  seq_pred.py  utils.py
sumo/: run.sh
sumo/sim1/: README.md  output.xml  rail.con.xml  rail.net.xml  rail.nod.xml  rail.rou.xml
sumo/sim2/: README.md  output.xml  rail.edg.xml  rail.net.xml  rail.rou.xml
sumo/sim3/: output.xml  rail.con.xml  rail.edg.xml  rail.net.xml  rail.nod.xml  rail.rou.xml  rail.sumocfg
